fix: comments + Scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,7 +49,7 @@
     @apply rounded-2xl border  border-slate-300/50   bg-slate-50/40 backdrop-blur-2xl dark:border-gray-600 dark:bg-gray-800/30;
   }
   .glass-ws {
-    @apply rounded-2xl   border-gray-300/50   bg-slate-50/40 shadow-md shadow-slate-900/20 backdrop-blur-sm dark:bg-slate-900/30   dark:shadow-black/40;
+    @apply rounded-2xl   border-gray-300/50   bg-slate-200/50 shadow-md shadow-slate-900/20 backdrop-blur-sm dark:bg-slate-900/30   dark:shadow-black/40;
   }
 
   .btn-glossy {
@@ -130,12 +130,11 @@
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 8px;
+  @apply sm:w-1.5;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: gray;
-  border-radius: 14px;
+  @apply rounded-md bg-gray-300 dark:bg-gray-600;
 }
 
 .float-ease-in-out {
